--- a/references.bib
+++ b/references.bib
@@ -31,6 +31,23 @@
   year={2017}
 }
 
+@article{rognvaldsson2009icelandic,
+  title={Icelandic Language Resources and Technology: Status and Prospects},
+  author={R{\"o}gnvaldsson, Eir{\'\i}kur and Loftsson, Hrafn and Bjarnad{\'o}ttir, Krist{\'\i}n and Helgad{\'o}ttir, Sigr{\'u}n and Whelpton, Matthew and Nikul{\'a}sd{\'o}ttir, Anna Bj{\"o}rk and Ingason, Anton Karl},
+  year={2009}
+}
+
+@article{streiter2006implementing,
+  title={Implementing NLP projects for noncentral languages: instructions for funding bodies, strategies for developers},
+  author={Streiter, Oliver and Scannell, Kevin P and Stuflesser, Mathias},
+  journal={Machine Translation},
+  volume={20},
+  number={4},
+  pages={267--289},
+  year={2006},
+  publisher={Springer}
+}
+
 @article{farrar2007gold,
   title={The GOLD Community of Practice: An infrastructure for linguistic data on the Web},
   author={Farrar, Scott and Lewis, William D},
@@ -620,6 +637,160 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
  year={2003}
 }
 
+@inproceedings{maegaard2006blark,
+  title={The BLARK concept and BLARK for Arabic},
+  author={Maegaard, Bente and Krauwer, Steven and Choukri, Khalid and J{\o}rgensen, L},
+  booktitle={Proc. LREC},
+  pages={773--778},
+  year={2006}
+}
+
+@inproceedings{binnenpoorte2002towards,
+  title={Towards a roadmap for human language technologies: Dutch-Flemish experience},
+  author={Binnenpoorte, Diana and Cucchiarini, Catia and D'Halleweyn, Elisabeth and Sturm, Janienke and De Vriend, Folkert},
+  booktitle={Proceedings lrec 2002},
+  year={2002}
+}
+
+@inproceedings{elenius2008language,
+  title={Language Resources and Tools for Swedish: A Survey.},
+  author={Elenius, Kjell and Forsbom, Eva and Megyesi, Be{\'a}ta},
+  booktitle={LREC},
+  year={2008}
+}
+
+@inproceedings{simov2004language,
+  title={A Language Resources Infrastructure for Bulgarian.},
+  author={Simov, Kiril Ivanov and Osenova, Petya and Kolkovska, Sia and Balabanova, Elisaveta and Doikoff, Dimitar},
+  booktitle={LREC},
+  year={2004}
+}
+
+@article{grover2011south,
+  title={The South African human language technology audit},
+  author={Grover, Aditi Sharma and Van Huyssteen, Gerhard B and Pretorius, Marthinus W},
+  journal={Language resources and evaluation},
+  volume={45},
+  number={3},
+  pages={271--288},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{mapelli2003report,
+  title={Report on a (minimal) set of LRs to be made available for as many languages as possible, and map of the actual gaps},
+  author={Mapelli, Val{\'e}rie and Choukri, Khalid},
+  journal={ENABLER Deliverable D},
+  volume={5},
+  pages={22},
+  year={2003}
+}
+
+@inproceedings{krauwer2006strengthening,
+  title={Strengthening the smaller languages in Europe},
+  author={Krauwer, Steven},
+  booktitle={Proc. of 5th Slovenian and 1st International Language Technologies Conference},
+  pages={9--10},
+  year={2006}
+}
+
+@misc{spice,
+author={Spice, B.},
+year={2012},
+title="Carnegie Mellon releases data on Haitian Creole to hasten development of translation tools.",
+url={http://www.eurekalert.org/pub_releases/2010-01/cmu-cmr012710.php},
+note={[Online, accessed 27-August-2012]}
+}
+
+@book{phoible,
+  address   = {Leipzig},
+  editor    = {Steven Moran and Daniel McCloy and Richard Wright},
+  publisher = {Max Planck Institute for Evolutionary Anthropology},
+  title     = {PHOIBLE Online},
+  url       = {http://phoible.org/},
+  year      = {2014}
+}
+
+@incollection{mariani2015language,
+  title={Language Matrices and a Language Resource Impact Factor},
+  author={Mariani, Joseph and Francopoulo, Gil},
+  booktitle={Language Production, Cognition, and the Lexicon},
+  pages={441--471},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{wittenburg2003dobes,
+  title={The DOBES model of language documentation},
+  author={Wittenburg, Peter},
+  journal={Language Documentation and Description},
+  volume={1},
+  pages={122--139},
+  year={2003}
+}
+
+@inproceedings{calzolari2010lrec,
+  title={The lrec map of language resources and technologies},
+  author={Calzolari, Nicoletta and Soria, Claudia and Del Gratta, Riccardo and Goggi, Sara and Quochi, Valeria and Russo, Irene and Choukri, Khalid and Mariani, Joseph and Piperidis, Stelios},
+  booktitle={Proceedings of the Seventh conference on International Language Resources and Evaluation (LREC'10)},
+  year={2010}
+}
+
+@article{dobrin2009sil,
+  title={SIL International and the disciplinary culture of linguistics: Introduction},
+  author={Dobrin, Lise M},
+  journal={Language},
+  volume={85},
+  number={3},
+  pages={618--619},
+  year={2009},
+  publisher={Linguistic Society of America}
+}
+@article{dobrin2009practical,
+  title={Practical language development: Whose mission?},
+  author={Dobrin, Lise M and Good, Jeff},
+  journal={Language},
+  volume={85},
+  number={3},
+  pages={619--629},
+  year={2009},
+  publisher={JSTOR}
+}
+
+@book{everett2009don,
+  title={Don't sleep, there are snakes: Life and language in the Amazonian jungle},
+  author={Everett, Daniel Leonard},
+  year={2009},
+  publisher={Profile Books}
+}
+
+
+
+@article{paricio2010new,
+  title={New ways to revitalise minority languages: the repercussions of the internet in the case of Aragonese},
+  author={Paricio Mart{\'\i}n, Santiago and Mart{\'\i}nez Cort{\'e}s, Juan},
+  year={2010},
+  publisher={Universitat Oberta de Catalunya}
+}
+
+
+@article{del2015visualising,
+  title={Visualising Italian Language Resources: a Snapshot},
+  author={Del Gratta, Riccardo and Frontini, Francesca and Monachini, Monica and Pardelli, Gabriella and Russo, Irene and Bartolini, Roberto and Goggi, Sara and Khan, Fahad and Quochi, Valeria and Soria, Claudia and others},
+  journal={CLiC it},
+  pages={100},
+  year={2015}
+}
+
+
+@article{del2014lremap,
+  title={The {LREMap} for under-resourced languages},
+  author={Del Gratta, Riccardo and Frontini, Francesca and Khan, Anas Fahad and Mariani, Joseph and Soria, Claudia},
+  journal={CCURL 2014: Collaboration and Computing for Under-Resourced Languages in the Linked Open Data Era},
+  pages={78},
+  year={2014}
+}
+
 @inproceedings{Lewis:2011:CMD:2132960.2133030,
  author = {Lewis, William D. and Munro, Robert and Vogel, Stephan},
  title = {Crisis {MT}: Developing a Cookbook for {MT} in Crisis Situations},
@@ -690,6 +861,16 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
   journal={Leipzig: Max Planck Institute for Evolutionary Anthropology. Available online at http://glottolog. org},
   year={2015}
 }
+
+@inproceedings{hammarstrom2015unesco,
+  title={Glottolog: A free, online, comprehensive bibliography of the world's languages},
+  author={Hammarstr{\"o}m, Harald},
+  booktitle={3rd International Conference on Linguistic and Cultural Diversity in Cyberspace},
+  pages={183--188},
+  year={2015},
+  organization={UNESCO}
+}
+
 
 @inbook{wals-141,
  author  = {Bernard Comrie},
