--- a/thesis.tex
+++ b/thesis.tex
@@ -46,8 +46,8 @@
 		\begin{minipage}{0.45\textwidth}
 			\begin{flushright} \large
 				\emph{Supervisors:} \\
-				Dr. Dietrich \textsc{Klakow}\\
-				Dr. Alexis \textsc{Palmer}\\
+				Prof. Dr. Dietrich \textsc{Klakow}\\
+				Prof. Dr. Alexis \textsc{Palmer}\\
 				% \emph{Advisors:} \\
 				% Dr. Harm \textsc{Brouwer}\\
 			\end{flushright}
