--- a/references.bib
+++ b/references.bib
@@ -14,6 +14,17 @@
  year={2014}
 }
 
+@article{raymond1999cathedral,
+  title={The cathedral and the bazaar},
+  author={Raymond, Eric},
+  journal={Knowledge, Technology \& Policy},
+  volume={12},
+  number={3},
+  pages={23--49},
+  year={1999},
+  publisher={Springer}
+}
+
 @article{lewis2010developing,
   title={Developing ODIN: A multilingual repository of annotated language data for hundreds of the world's languages},
   author={Lewis, William D and Xia, Fei},
