Licenses and where is open source code

--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -195,6 +195,7 @@ Digital presence, briefly alluded to previously, can be thought of as the amount
 However, the digital sphere can best be thought of schematically as a new domain for language use, and it is overwhelmingly today represented on the web. Ten years ago, it was fashionable to include references to the web "as a a corpus" (as \citet{scannell2007crubadan}, for instance, cited \citep{resnik1999mining, ghani2001mining, kilgarriff2001web}, although the latter two were in reference to low-resource languages); today, it is more common to cite studies on digital natives such as the 20,000 citation-strong \citet{prensky2001digital} paper\footnote{This number is from Google Scholar (\href{https://scholar.google.com}{https://scholar.google.com}) accessed April 9, 2018.}, or to assume that the web, and occasionally phone networks, are the main locations for digital communication. The web is ubiquitous; not only are more than half of the global population connected to the internet\footnote{\href{https://www.internetworldstats.com/stats.htm}{https://www.internetworldstats.com/stats.htm}}, but the internet, in developed countries, is used for all levels of communication, such as education, work, mass media, and in the home and local communities. Digital presence, then, is functionally the amount of usage on the web.
 
 \subsubsection{Finding resources}
+\label{subsec:finding-resources}
 
 There are several resources which can be used to judge the amount of corpora for a language on the web, outside of papers defining metrics to judge these languages and to state whether they are endangered or thriving. The main resource for low resource languages is almost certainly the Cr\'ubad\'an project, developed by \citet{scannell2007crubadan}.\footnote{\href{http://crubadan.org/}{http://crubadan.org/}} This is a massive crawler which looks for documents with trigram frequencies for particular languages by checking against a seed corpus for under-resourced languages developed from Wikipedia, the Jehovah's Witness translations, and translations of the UN Declaration of Human Rights (UNHR). It is (to this author's knowledge) often the only corpus for a low resource language on the web, as is the case with Naskapi (see Section~\ref{sec:naskapi}).
 
