--- a/references.bib
+++ b/references.bib
@@ -510,8 +510,8 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 	Author  = {Littauer, Richard and Paterson III, Hugh},
 	Title   = {Open Source Code Serving Endangered Languages},
 	Booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
- Editor  = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
- Address  = {Portoro\v{z}, Slovenia},
+  Editor  = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
+  Address  = {Portoro\v{z}, Slovenia},
 	Year   = {2016}
 }
 
@@ -703,6 +703,76 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
   booktitle={Proc. of 5th Slovenian and 1st International Language Technologies Conference},
   pages={9--10},
   year={2006}
+}
+
+@inproceedings{gousios2014lean,
+  title={Lean GHTorrent: GitHub data on demand},
+  author={Gousios, Georgios and Vasilescu, Bogdan and Serebrenik, Alexander and Zaidman, Andy},
+  booktitle={Proceedings of the 11th working conference on mining software repositories},
+  pages={384--387},
+  year={2014},
+  organization={ACM}
+}
+
+@inproceedings{gousios2012ghtorrent,
+  title={GHTorrent: GitHub's data from a firehose},
+  author={Gousios, Georgios and Spinellis, Diomidis},
+  booktitle={Mining software repositories (msr), 2012 9th ieee working conference on},
+  pages={12--21},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{kalliamvakou2014promises,
+  title={The promises and perils of mining github},
+  author={Kalliamvakou, Eirini and Gousios, Georgios and Blincoe, Kelly and Singer, Leif and German, Daniel M and Damian, Daniela},
+  booktitle={Proceedings of the 11th working conference on mining software repositories},
+  pages={92--101},
+  year={2014},
+  organization={ACM}
+}
+
+@inproceedings{beller2016analyzing,
+  title={Analyzing the state of static analysis: A large-scale evaluation in open source software},
+  author={Beller, Moritz and Bholanath, Radjino and McIntosh, Shane and Zaidman, Andy},
+  booktitle={Software Analysis, Evolution, and Reengineering (SANER), 2016 IEEE 23rd International Conference on},
+  volume={1},
+  pages={470--481},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{allamanis2013mining,
+  title={Mining source code repositories at massive scale using language modeling},
+  author={Allamanis, Miltiadis and Sutton, Charles},
+  booktitle={Proceedings of the 10th Working Conference on Mining Software Repositories},
+  pages={207--216},
+  year={2013},
+  organization={IEEE Press}
+}
+
+@article{moshagenopen,
+  title={Open-source infrastructures for collaborative work on under-resourced languages},
+  author={Moshagen, Sjur and Rueter, Jack and Pirinen, Tommi and Trosterud, Trond and Tyers, Francis},
+  journal={CCURL 2014: Collaboration and Computing for Under-Resourced Languages in the Linked Open Data Era},
+  pages={71--77},
+  year={2014}
+}
+
+@article{makela2016integrated,
+  title={LAS: an integrated language analysis tool for multiple languages},
+  author={M{\"a}kel{\"a}, Eetu},
+  journal={The Journal of Open Source Software},
+  volume={2016},
+  year={2016}
+}
+
+@article{kleinberg2017web,
+  title={Web-based text anonymization with Node. js: Introducing NETANOS (Named entity-based Text Anonymization for Open Science)},
+  author={Kleinberg, Bennett and Mozes, Maximilian},
+  journal={The Journal of Open Source Software},
+  volume={2017},
+  year={2017}
 }
 
 @misc{spice,
