--- a/3-open-source.tex
+++ b/3-open-source.tex
@@ -1,9 +1,11 @@
 % !TEX root = thesis.tex
-\section{Open Source Code}\label{sec:open-source}
+\section{Open Source Code}
+\label{sec:open-source}
 
 % Changing tack, here I will talk about what \emph{open source} means. This is important - otherwise, this thesis is just a rehash of current existing computational work on LRLs.
 
 \subsection{Defining {\it Open Source}}
+\label{subsec:defining-open-source}
 
 {\it Open Source} is a complex term which refers to any code, not just code related to computational linguistics. Here, I'll define what I mean by Open Source. This will largely inform the next section where I talk about its use for low resource languages.
 
@@ -46,27 +48,38 @@ The Open Source Institute (OSI), whose founders were one of the original coiners
   No provision of the license may be predicated on any individual technology or style of interface.
 \end{enumerate}
 
+\subsubsection{Open Source Licenses}
+\label{subsec:licenses}
+
 These different terms and conditions are often conflated, and a legally-valid license which satisfies all of them is difficult to write on an {\it ad hoc} basis. For this reason most open source programming relies on using existing licenses, and copying them for specific projects. There are tools today to help make licensing more clear to naï¿½ve users, such as \href{https://choosealicense.com}{choosealicense.com}, \href{https://tldrlegal.com}{tldrlegal.com}, and so on.
 
 Some of the main licenses used in the wild are as follows:
 
 \begin{itemize}
 \item The MIT license, developed at MIT, is the most popular license on GitHub, the world's largest repository of code, used in over 40\% of the projects licensed there as of March 2015.\footnote{\href{https://blog.github.com/2015-03-09-open-source-license-usage-on-github-com/}{https://blog.github.com/2015-03-09-open-source-license-usage-on-github-com/}} It is a a very permissive license, which allows commercial use, modification, distribution, sublicensing, and private use of any code so licensed. It also waives liability for the authors of the code, saving them from needing to worry about lawsuits in cases where their code would otherwise be liable - the code is granted as is, and what the user does with it is not the author's fault. The only restriction is that you need to include the license in any software which uses it.
-\item The Apache License 2.0, developed by the Apache Software Foundation\footnote{\href{https://www.apache.org/licenses/}{https://www.apache.org/licenses/}}, is similar, but disallows users from trademarking code with the license, requires a few smaller modifications like stating code changes and adding a NOTICE file if one exists to derivational code, and also adds a patents clause for contributors.
-\item BSD 3-Clause "New" or "Revised" license
-\item BSD 2-Clause "Simplified" or "FreeBSD"
-\item GNU General Public License (GPL)
-\item GNU Library or "Lesser" General Public License (LGPL)
-\item Mozilla Public License 2.
-\item Common Development and Distribution
-\item Creative Commons licenses
+\item The Apache License 2.0, developed by the Apache Software Foundation\footnote{\href{https://www.apache.org/licenses/}{https://www.apache.org/licenses/}}, is similar, but disallows users from trademarking code with the license, requires a few smaller modifications like stating code changes and adding a NOTICE file, if one exists, to derivational code, and also adds a patents clause for contributors.
+\item The BSD licenses were developed for use with Berkeley Software Distribution, a Unix-like OS. There have been multiple iterations; the first, 4-clause license required every subsequent license to reference and acknowledge the original, ending with large lists of acknowledgements; a subsequent 3-clause license (often called the "New" BSD) removed this, but kept a clause which stated that usage does not imply endorsement by the original contributors; and this was removed in a 2-clause version, often called "Simplified" or the "FreeBSD" license. 
+\item The GNU General Public License (GPL)\footnote{\href{https://www.gnu.org/licenses/}{https://www.gnu.org/licenses/}} is the main example of copyleft licensing, where any derivative works that use GPL licensed code must also use a GPL license. This causes major issues when users want to combine code from multiple sources, some of whose licenses may conflict. For this reason, the GNU Library or "Lesser" General Public License (LGPL) was created, to allow only code under the LGPL to be accessible and modifiable openly, while all other code doesn't have to be. GPL also demands that users include installation instructions, 
+\item Creative Commons licenses\footnote{\href{https://creativecommons.org/licenses/}{https://creativecommons.org/licenses/}}, mostly used for sharing non-code material such as images and documents openly, was created by Lawrence Lessig, the founder of the Creative Commons organisation\footnote{\href{https://creativecommons.org/}{https://creativecommons.org/}}, and may also be used for code projects. There are many licenses they offer, and some variants are copyleft licenses - in particular, "share-alike" clauses are an example of copyleft. 
+\item The Unlicense\footnote{\href{https://unlicense.org/}{https://unlicense.org/}}, created in 2010, is another option, which explicitly states that code is unlicensed, with no restrictions, and also with no liability for the authors (unlike code which is not licensed, which has stricter protections under US copyright law than code which specifically excludes a license). There is a Creative Commons Zero\footnote{\href{https://creativecommons.org/publicdomain/zero/1.0/}{https://creativecommons.org/publicdomain/zero/1.0/}} license which is similar, as well as the WTFPL license ("Do What The Fuck You Want Public License")\footnote{\href{http://www.wtfpl.net}{http://www.wtfpl.net}}, which, although intentionally comically profane, is non-trivial in that it is used in 11,714 different software projects on GitHub as of this writing.\footnote{\href{https://github.com/search?q=license\%3AWTFPL}{https://github.com/search?q=license\%3AWTFPL}} 
 \end{itemize}
 
-
+Ultimately, licenses are complicated legal documents with various repercussions for how code is accessible. 
 
 \subsection{Where is open source code?}
+\label{subsec:where-is-open-source-code}
 
-Here, I will include a short section on how the open source world works. In particular, I'll answer the question of where code lives. I'll include a short overview and case study on GitHub, SourceForge, and some academic archival sites (UPenn, Max Planck, DFKI).
+For closed source or proprietary software, the code itself often isn't stored in the open or accessible to third parties. However, for open source software to be defined as open source according to OSI's definitions, it needs to be publicly accessible and well-publicised. This means that storing code on a server where it could technically be accessed via some protocol, or less ideally through a mail-order CD as \citet{krauwer2006strengthening} suggested, is not enough; instead, it ought to be linked to elsewhere and available for everyone to access. This raises the question: where is most open source code stored? 
+
+Unequivocally, GitHub\footnote{\href{https://github.com}{https://github.com}} is the largest source of shared, open code on the internet, with 27 million users and 80 million repositories as of March 2018\footnote{\href{https://github.com/about}{https://github.com/about}}. There have been several large-scale studies of its codebase by researchers \citep{gousios2012ghtorrent, allamanis2013mining, gousios2014lean, kalliamvakou2014promises, beller2016analyzing} which confirm this. Other large repositories for code of a similar nature, include Sourceforge, with 430k projects and 3.7m users\footnote{\href{https://sourceforge.net/}{https://sourceforge.net, accessed April 18, 2018}}, Bitbucket\footnote{\href{https://bitbucket.org/}{https://bitbucket.org/}} with 5m users\footnote{\href{https://blog.bitbucket.org/2016/09/07/bitbucket-cloud-5-million-developers-900000-teams/}{https://blog.bitbucket.org/2016/09/07/bitbucket-cloud-5-million-developers-900000-teams/}},  Launchpad\footnote{\href{https://launchpad.net/}{https://launchpad.net/}} with 4.2m users\footnote{\href{https://launchpad.net/people}{https://launchpad.net/people}}, and Gitlab\footnote{\href{http://gitlab.com/}{http://gitlab.com/}}, which holds the majority share of self-hosted Git platforms\footnote{\href{https://about.gitlab.com/is-it-any-good/}{https://about.gitlab.com/is-it-any-good/}}. All of these platforms are based around Git, the versioning software developed by Linus Torvalds, used to store different versions of code for developers and teams, which lends itself particularly to shared code that can be updated easily by outside and community developers. It is worth mentioning that not all of these projects are public. 
+
+Self-hosted Git instances are a common way of storing proprietary code; one sets up a versioning system within a company, using the tools and set of social standards that developers are used to from working on open source code, but limit access to employees. This is what is meant by GitLab's statement that they host most self-hosted Git platforms. Git isn't the only possible versioning software for this; Google has their own versioning tool, Piper, which hosts the over two billion lines of code used by the majority of the company.\footnote{\href{https://www.wired.com/2015/09/google-2-billion-lines-codeand-one-place/}{https://www.wired.com/2015/09/google-2-billion-lines-codeand-one-place/}} Self-hosted Git instances are generally not open source - generally, one is limited to a hosting service such as GitHub, where one pays a fee for hosting, or, more commonly today, hosts for free if public, but pays a fee for private hosting. 
+
+There are alternatives to cloud storage (the cloud here being a common metaphor for hosting on someone else's servers) with a hosting provider; one would be storing the code on one's own website, and running your own server or building the user interface yourself. This is largely uncommon due to setup costs, but occasionally happens with academics and smaller teams who are not used to larger hosts or who are worried about the longevity of providers. This latter worry is founded; for instance, Google Code was closed after ten years of running in 2016, causing many projects to need to port to another service such as GitHub.\footnote{\href{https://code.google.com/}{https://code.google.com/}} For academics, a common solution to offset setup and hosting costs is to use university websites and archives as a suitable place to store open source code. For instance, Giellatekno, a language-technology research group, and Divvun, a linked product development group, both work primarily on Sámi languages, and both use the same Subversion (another versioning system) database for storing their code \citep{moshagenopen}, which is hosted by UiT The Arctic University of Norway.\footnote{\href{http://giellatekno.uit.no/}{http://giellatekno.uit.no/}} 
+
+In a large part, the question of where to store information is one which the large archival sites mentioned in Section~\ref{subsec:finding-resources} was made to solve. In particular, this is true for non-code resources, such as audio and video corpora, which historically have prioritised for storage over code due to the size of the corpora and due to the older industry standards of keeping all code related to research private, especially when that code was funding by enterprise. Many of these sites were repositories of metadata which pointed to individually hosted content, which made the links susceptible to link rot and offloaded the issue of storage altogether. 
+
+Today, however, there is a sea change towards putting computational work in the open. Occasionally, this means that academics point to the open source code for their papers on GitHub or elsewhere, or publish their software itself as a research object. For example, \citet{makela2016integrated} and \citet{kleinberg2017web} were published with the Journal of Open Source Software (JOSS)\footnote{\href{http://joss.theoj.org/}{http://joss.theoj.org/}}, which peer-reviews, publishes, and assigns digital object identifiers (DOIs) to software as a way of recognising important academic work. The code for these papers is publicly available on GitHub. 
 
 \subsection{Digital Permanence and Storage}
 \label{subsec:digital-permanence}
@@ -76,6 +89,7 @@ Universities and institutions have short timelines and are largely dependent on 
 % Alexis: there are also issues around evolution of code -- what about open source code that does great things but requires, e.g., java from 10 years ago?
 
 \subsection{Data and privacy}
+\label{subsec:data-and-privacy}
 
 Here, I'll talk specifically about data rights and privacy, in regards to whether it makes sense to decouple code from data, especially in cases of low resource languages, where sparse data may be naturally enriched with annotation schemas and hard to separate out from the tools being used. In such cases, how do we as a community, researchers as providers, and developers as consumers, deal with licensing, privacy, and proprietary data? Does it make sense to provide links to code that can be used institutionally or commercially without also allowing for things like royalties for usage, or proper licensing for data? Bound up in this are also ethical concerns - well studied in theoretical field linguistics - about the language users themselves not wishing for their data to be used in certain ways.
 
@@ -119,18 +133,21 @@ Here, I'll talk specifically about data rights and privacy, in regards to whethe
 
 
 \subsection{Legal rights and liability}
+\label{subsec:legal-rights}
 
 Here, I'll talk about specific licenses used in Open Source, and how they apply to code. I'll try to keep this brief.
 
 I'll also talk about liability wavers - a separate issue from licenses. I'll talk about the standard liability wavers used with the MIT license, and other issues that might arise for language code specifically.
 
 \subsection{Military and enterprise solutions}
+\label{subsec:military-and-enterprise}
 
 In this section, I will talk about how open source meshes with military and enterprise development.
 
 %% https://www.nist.gov/itl/iad/mig/lorehlt-evaluations, DARPA
 
 \subsection{Funding}
+\label{subsec:oss-funding}
 
 Here, I'll talk about funding again - but in terms of open source code. This will be a short section.
 
@@ -145,5 +162,6 @@ Here, I'll talk about funding again - but in terms of open source code. This wil
 % - Ethical and moral concerns for big business usage
 
 \subsection{Ethical reasons for using open source}
+\label{subsec:oss-ethics}
 
 Finally, I want to close with a discussion of the moral and ethical reasons for using open source, and whether or not these concerns are relevant to computational linguists.
