Lowercase section headings

--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -70,7 +70,7 @@ A \textit{computer} or \textit{computational} language is a formalised language 
 
 Other terms used in exploring the theory of language, semiotics, or formal language theory - such as context-free or recursively-enumerable languages - are outside of the scope of this thesis unless they touch on human and low resource languages directly in some tangible way.
 
-\subsection{Metrics for Language Vitality}
+\subsection{Metrics for language vitality}
 \label{subsec:metrics}
 
 Language health or vitality is a topic of increasing scholarship and interest. Superficially, it makes sense to use a similar system to classify languages as one would classify biological species, using the metrics defined by the International Union for Conservation of Nature (IUCN)\footnote{\href{http://www.iucnredlist.org/}{http://www.iucnredlist.org/}}. They have nine levels of classification: Extinct, Extinct in the Wild, Critically Endangered, Endangered, Vulnerable, Near Threatened, Least Concern, Data Deficient and Not Evaluated. However, the system is not directly transferable - how would a dormant language be classified? One can see immediately that there is a need for a language-specific rating system.
