--- a/4-open-source-for-end-langs.tex
+++ b/4-open-source-for-end-langs.tex
@@ -47,13 +47,13 @@ Here, I'll explain some open source resources that can be used to bootstrap deve
 
 Here I'll talk about the inextricable nature of linguistics data and code, and how they are linked.
 
-\subsection{A Database for Open Source Code}\label{sec:solutions}
+\subsection{A database for open source code}\label{sec:solutions}
 
 Here, I'll talk about a database of open source code. Specifically, I'll mention my own work building \href{https://github.com/RichardLitt/endangered-languages}{https://github.com/RichardLitt/endangered-languages}, described first in \citet{CCURL}, and what it contains and who has worked on it with me. I'll cover the main tools, what kind of tools were included, and why I built the database on GitHub in this way.
 
 I'll also include diagnostics on how it has been used and how the tools it mentions have been used - what percentage have been downloaded, and so on.
 
-\subsection{Linked Data}
+\subsection{Linked data}
 
 Here, I'll briefly talk about related efforts with the Open Linguistics Working Group's \citep{chiarcos2012open} work on open source data reflected on the semantic web.\citep{chiarcos2013building}
 
